Force and use static lvm and busybox

--- a/virtual/miller-base/files/lvmroot/makefile
+++ b/virtual/miller-base/files/lvmroot/makefile
@@ -1,7 +1,7 @@
 initrd.cpio.lzma : initrd.cpio.gz makefile init
 	gunzip -c $< | lzma -9 > $@
 
-initrd.cpio.gz : initrd.list makefile init
+initrd.cpio.gz : initrd.list makefile init /usr/src/linux/usr/gen_init_cpio
 	/usr/src/linux/usr/gen_init_cpio $< > $@
 	/usr/sbin/splash_geninitramfs -a $@ -r 1280x1024 livecd-2007.0 --no8bpp
 
